--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-<h1>Holi</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inicio de sesión</title>
+    <link rel="stylesheet" href="CSS/style.css">
+</head>
+<body>
+    <main>
+        <div class="contenedor__todo">
+            <div class="caja__trasera">
+                <div class="caja__trasera-admin">   
+                    <h3>Administrador</h3>
+                    <p>Inicia sesión si eres administrador de la pàgina</p>
+                    <button id="btn__iniciar-sesion">Iniciar sesión</button>
+                </div>
+                <div class="caja__trasera-user">   
+                    <h3>Usuario</h3>
+                    <p>Inicia sesión si eres usuario de la pàgina</p>
+                    <button id="btn__iniciar-sesion">Iniciar sesión</button>
+                </div>
+            </div>
+            <div class="contenedor__login">
+                <form action="" class="formulario_admin">
+                    <h2>Inicio de sesión admin</h2>
+                    <input type="text" placeholder="Nombre">
+                    <input type="text" placeholder="Correo">
+                    <input type="password" placeholder="Contraseña">
+                    <button type="submit" id="btn__entrar">Entrar</button>
+                </form>
+                <form action="" class="formulario_user">
+                    <h2>Inicio de sesión user</h2>
+                    <input type="text" placeholder="Nombre">
+                    <input type="text" placeholder="Correo">
+                    <input type="password" placeholder="Contraseña">
+                    <button type="submit"  id="btn__entrar">Entrar</button>
+                </form>
+            </div>
+        </div>
+    </main>
+</body>
+</html>
