--- a/index.html
+++ b/index.html
@@ -3,41 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio de sesión</title>
+    <title>Login - Biblioteca</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <main>
         <div class="contenedor__todo">
             <div class="caja__trasera">
-                <div class="caja__trasera-admin">   
-                    <h3>Administrador</h3>
-                    <p>Inicia sesión si eres administrador de la pàgina</p>
-                    <button id="btn__iniciar-sesion">Iniciar sesión</button>
+                <div class="caja__trasera-admin">
+                    <h3>¿Eres administrador?</h3>
+                    <p>Inicia sesión para acceder al panel de administración</p>
+                    <button id="btn__iniciar-sesion-admin">Iniciar Sesión Admin</button>
                 </div>
-                <div class="caja__trasera-user">   
-                    <h3>Usuario</h3>
-                    <p>Inicia sesión si eres usuario de la pàgina</p>
-                    <button id="btn__iniciar-sesion">Iniciar sesión</button>
+                <div class="caja__trasera-user">
+                    <h3>¿Ya tienes una cuenta?</h3>
+                    <p>Inicia sesión para entrar en la página</p>
+                    <button id="btn__iniciar-sesion-user">Iniciar Sesión</button>
                 </div>
             </div>
-            <div class="contenedor__login">
-                <form action="" class="formulario_admin">
-                    <h2>Inicio de sesión admin</h2>
-                    <input type="text" placeholder="Nombre">
-                    <input type="text" placeholder="Correo">
-                    <input type="password" placeholder="Contraseña">
-                    <button type="submit" id="btn__entrar">Entrar</button>
+
+            <div class="contenedor__login-register">
+                <!-- Login Admin -->
+                <form action="login.php" method="post" class="formulario__login formulario__admin">
+                    <h2>Iniciar Sesión Admin</h2>
+                    <input type="text" name="username" placeholder="Nombre de usuario" required>
+                    <input type="password" name="password" placeholder="Contraseña" required>
+                    <input type="hidden" name="role" value="admin">
+                    <button type="submit">Entrar</button>
                 </form>
-                <form action="" class="formulario_user">
-                    <h2>Inicio de sesión user</h2>
-                    <input type="text" placeholder="Nombre">
-                    <input type="text" placeholder="Correo">
-                    <input type="password" placeholder="Contraseña">
-                    <button type="submit"  id="btn__entrar">Entrar</button>
+
+                <!-- Login Usuario -->
+                <form action="login.php" method="post" class="formulario__login formulario__user">
+                    <h2>Iniciar Sesión</h2>
+                    <input type="text" name="username" placeholder="Nombre de usuario" required>
+                    <input type="password" name="password" placeholder="Contraseña" required>
+                    <input type="hidden" name="role" value="user">
+                    <button type="submit">Entrar</button>
                 </form>
             </div>
         </div>
     </main>
+    <script src="json/script.js"></script>
 </body>
 </html>
